Bug 308275 - outgoingIconPath replaced by incomingIconPath
Summary: outgoingIconPath replaced by incomingIconPath
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-12 07:27 UTC by Alin M Elena
Modified: 2012-12-17 17:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.2
Sentry Crash Report:


Attachments
patch (1.14 KB, patch)
2012-10-12 07:28 UTC, Alin M Elena
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2012-10-12 07:27:11 UTC
outgoingIconPath replaced by incomingIconPath
outgoingIconPath replaced by incomingIconPath

Reproducible: Always
Comment 1 Alin M Elena 2012-10-12 07:28:42 UTC
Created attachment 74491 [details]
patch
Comment 2 Daniele E. Domenichelli 2012-10-12 08:58:52 UTC
Git commit 490fe30a97ef3ae8d899034688ed40e0e1eae873 by Daniele E. Domenichelli, on behalf of Alin M Elena.
Committed on 12/10/2012 at 10:52.
Pushed by ddomenichelli into branch 'filters'.

outgoingIconPath replaced by incomingIconPath

M  +1    -1    lib/adium-theme-view.cpp

http://commits.kde.org/telepathy-text-ui/490fe30a97ef3ae8d899034688ed40e0e1eae873