outgoingIconPath replaced by incomingIconPath

BUG: 308275